[project]
name = "biv-lite"
version = "0.2.2"
description = "Manipulation & visualisation of a fitted biventricular model."
authors = [
    {name="Avan Suinesiaputra", email="k2145129@kcl.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy",
    "numpy",
    "pyvista",
    "typer",
    "loguru"
]

[project.urls]
Homepage = "https://github.kcl.ac.uk/YoungLab/biv-lite"
Issues = "https://github.kcl.ac.uk/YoungLab/biv-lite/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
biv-lite = "biv_lite.main:app"

[tool.setuptools.package-data]
"biv_lite.model" = ["*.txt", "*.mat"]
