[project]
name = "biv-lite"
version = "0.2.5"
description = "Manipulation & visualisation of a fitted biventricular model."
authors = [
    {name="Avan Suinesiaputra", email="avan.sp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy",
    "numpy",
    "pyvista",
    "typer",
    "loguru",
    "plotly",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/avansp/biv-lite"
Issues = "https://github.com/avansp/biv-lite/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
biv-lite = "biv_lite.main:app"

[tool.setuptools.package-data]
"biv_lite.model" = ["*.txt", "*.mat"]
